<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>
    <string name="hello_world">nothing to display</string>
    <string name="service_name">test_service</string>
    <string name="edit_sender_hint">sender id to filter</string>
    <string name="button_refresh">refresh</string>
    <string name="pref_sender">Sender ID</string>
    <string name="pref_highlight_cash">Highlight cash withdrawal</string>
    <string name="pref_sender_summ">Sender ID to filter</string>
    <string name="pref_highlight_cash_summ">Highlight cash withdrawal transactions in the list</string>
    <string name="pref_clear_data">Clear data</string>
    <string name="pref_backup_data">Backup data</string>
    <string name="pref_restore_data">Restore data</string>
    <string name="pref_clear_data_summ">Clear all transaction and card data</string>
    <string name="pref_backup_data_summ">Backup all transaction to SD card</string>
    <string name="pref_restore_data_summ">Restore transactions from a file</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dialog_backup_data_message">Do you want to backup your data?</string>
    <string name="dialog_restore_data_message">Do you want to restore your data from sdcard/smslog/transactions? (please make sure that file exists)</string>
    <string name="dialog_clear_all_message">Do you want to clear all application data?</string>
    <string name="dialog_clear_all">Clear</string>
    <string name="dialog_tran_edit_message">Please edit transaction details</string>
    <string name="dialog_tran_save_button">Save</string>
    <string name="dialog_tran_discard_button">Discard changes</string>
    <string name="dialog_tran_split_button">Split</string>
    <string name="amount">amount</string>
    <string name="description">description</string>
    <string name="remove_transaction">Remove</string>
    <string name="remove_transaction_message">Do you want to remove transaction?</string>
    <string name="tags_hint">tags</string>
    <string name="not_specified">not specified</string>
    <string name="title_activity_summary">Transactions summary</string>
    <string name="title_activity_edit_transaction">EditTransactionActivity</string>
    <string name="title_activity_add_transaction">Specify transaction details</string>
    <string name="pref_sms_locale_summ">Language of your PUMB sms messages</string>
    <string name="pref_sms_locale">SMS locale</string>
    <string name="pref_saldo_summ">Saldo of the card account when the app was installed</string>
    <string name="pref_saldo">Saldo</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="split_amount_warning">Please enter amount less than original</string>
    <string name="done">Done</string>
    <string name="add_tags">Add selected tags</string>
    <string name="tran_edit_advanced">Advanced transaction options</string>
    <string name="mark_cash">Mark as "cash"</string>
    <string name="new_tag">(enter tags manually)</string>
    <string name="new_tag_hint">enter tags manually</string>
    <string name="section_suggested">Suggested tags</string>
    <string name="section_popular">Popular tags</string>
    <string name="section_other">Other tags</string>
    <string name="section_all">All tags</string>

    <string-array name="spinner_sort_types">
        <item>@string/date_asc</item>
        <item>@string/date_desc</item>
        <item>@string/amount_asc</item>
        <item>@string/amount_desc</item>
    </string-array>

    <string name="date_asc">date asc</string>
    <string name="date_desc">date desc</string>
    <string name="amount_asc">amount asc</string>
    <string name="amount_desc">amount desc</string>

    <string-array name="sms_locales">
        <item>@string/EN</item>
        <item>@string/UA</item>
        <item>@string/NONE</item>
    </string-array>

    <string name="EN">EN</string>
    <string name="UA">UA</string>
    <string name="NONE">NONE</string>

    <string-array name="tran_types">
        <item>@string/tran_type_expense</item>
        <item>@string/tran_type_income</item>
        <item>@string/tran_type_transfer</item>
    </string-array>

    <string name="tran_type_income">income</string>
    <string name="tran_type_expense">expense</string>
    <string name="tran_type_transfer">transfer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_accounts">AccountsActivity</string>

</resources>