<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="1234"
        android:key="pref_sender"
        android:summary="@string/pref_sender_summ"
        android:title="@string/pref_sender" />

    <ListPreference
        android:defaultValue="@string/NONE"
        android:dialogTitle="@string/pref_sms_locale"
        android:entries="@array/sms_locales"
        android:entryValues="@array/sms_locales"
        android:key="pref_sms_locale"
        android:summary="@string/pref_sms_locale_summ"
        android:title="@string/pref_sms_locale" />

    <kalpas.expensetracker.ClearAllPreference
        android:summary="@string/pref_clear_data_summ"
        android:title="@string/pref_clear_data" />
    
    <kalpas.expensetracker.BackupDataPreference
        android:summary="@string/pref_backup_data_summ"
        android:title="@string/pref_backup_data" />
    
    <kalpas.expensetracker.RestoreDataPreference
        android:summary="@string/pref_restore_data_summ"
        android:title="@string/pref_restore_data" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_highlight_cash"
        android:summary="@string/pref_highlight_cash_summ"
        android:title="@string/pref_highlight_cash" />
    
    <EditTextPreference
        android:defaultValue="0"
        android:inputType="number|numberSigned|numberDecimal"
        android:key="pref_saldo"
        android:summary="@string/pref_saldo_summ"
        android:title="@string/pref_saldo" />

</PreferenceScreen>