<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/content_new"
        android:orderInCategory="150"
        android:showAsAction="ifRoom"
        android:title="@string/action_add"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/navigation_refresh"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_summary"
        android:icon="@drawable/collections_view_as_list"
        android:orderInCategory="400"
        android:showAsAction="always"
        android:title="@string/action_add"/>

</menu>