<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:orientation="vertical" >

    <!-- BUTTON BAR -->

    <LinearLayout
        android:id="@+id/button_bar"
        style=" ?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_discard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:drawableLeft="@drawable/navigation_cancel"
            android:onClick="onCancel"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/button_split"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:drawableLeft="@drawable/content_split"
            android:onClick="onSplit"
            android:text="@string/dialog_tran_split_button" />

        <Button
            android:id="@+id/button_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:drawableLeft="@drawable/navigation_accept"
            android:onClick="onUpdate"
            android:text="@string/dialog_tran_save_button" />
    </LinearLayout>

    <!-- END OF BUTTON BAR -->


    <!-- DATE SHOW/EDIT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.5"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|right"
            android:onClick="showDatePickerDialog"
            android:text="@string/not_specified"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.5"
            android:clickable="true"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical|left"
            android:onClick="showTimePickerDialog"
            android:text="@string/not_specified"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- END OF DATE -->

    <TextView
        android:id="@+id/recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/not_specified" />

    <LinearLayout
        style=" ?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/sign"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:textOff="-"
            android:textOn="+"
            android:textSize="18sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.75"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/amount"
            android:inputType="phone"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/button_tran_details"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/tran_edit_advanced"
            android:drawableBottom="@drawable/toggle_expand"
            android:onClick="onAdvancedTransactionDetailsClick"
            android:text=""
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tran_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Spinner
            android:id="@+id/spinner_tran_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:id="@+id/bar_edit_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:hint="@string/tags_hint"
            android:inputType="textMultiLine" />

        <!-- TAGS -->

        <ScrollView
            android:id="@+id/tag_list_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/tag_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/listDivider"
                android:orientation="vertical"
                android:showDividers="middle" >
            </LinearLayout>
        </ScrollView>

        <ImageButton
            android:id="@+id/button_add_tags"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/add_tags"
            android:onClick="onAddTagsClick"
            android:src="@drawable/content_new" />

        <ImageButton
            android:id="@+id/button_accept_tags"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:contentDescription="@string/add_tags"
            android:onClick="onAcceptTagsClick"
            android:src="@drawable/navigation_accept"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>